<resources>
    <string name="app_name">Blabber</string>
    <string name="title_activity_register">Register New User</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_user">New User?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="create_account">Create Account</string>
    <string name="blabber">Blabber</string>
    <string name="settings">settings</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="returning_user">Returning User?</string>
    <string name="welcome_to_blabber">Welcome to Blabber!</string>
    <string name="blabber_logo">blabber_logo</string>
    <string name="login_to_account">Login to Account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="change_status">Change Status</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="your_status">Your Status</string>
    <string name="edit_status">Edit Status</string>
    <string name="save">Save</string>
    <string name="all_users">All Users</string>
    <string name="user_name">User Name</string>
    <string name="user_status">User Status</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="friends">Friends</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="user_online_offline">User Online/Offline</string>
    <string name="last_seen">Last Seen</string>
    <string name="add_image">Add_Image</string>
    <string name="send_message">Send_Message</string>
    <string name="enter_message">Enter Message...</string>

</resources>
